# telegram-wiki-bot

./: README.md  docker-compose.yml  pyproject.toml
examples/cv/: Dockerfile  docker-compose.yml  locale.json
src/: Dockerfile.amd64  Dockerfile.arm  Makefile  README.md  entrypoint.sh  locale.json  main.py  requirements.txt
src/commands/: __init__.py  list_articles.py  search.py  set_lang.py  start.py
src/commands/redactor/: __init__.py  create_article.py  edit_article.py  edit_draft_content.py  submit_draft.py
src/core/: bot.py  db.py  settings.py
src/exceptions/: draft.py  draft_edit.py
src/middleware/: __init__.py  db_session.py  register_user.py
src/migrations/: env.py
src/migrations/versions/: 9ced04691b62_init.py
src/models/: __init__.py  article.py  base.py  changelog.py  draft.py  language.py  user.py
src/schemas/: article.py  draft.py  user.py
src/services/: _locale.py  cache.py  language.py  utils.py
src/services/article/: content.py  create.py  get.py  message.py  search.py  update.py
src/services/draft/: content.py  create.py  editing_message.py  get.py  update.py
src/services/user/: get_or_create.py  update.py
src/states/: draft.py
src/use_cases/: article.py  start.py  user.py
src/use_cases/redactor/: create_article.py  create_draft.py  edit_article_status.py  edit_draft.py  submit_draft.py
