[tool.poetry]
name = "wikibot"
version = "0.1.0"
description = ""
authors = ["rashid <my@rdmingazov.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
greenlet = "^3.1.1"
alembic = "^1.13.3"
sqlalchemy = "^2.0.35"
aiogram = "^3.13.1"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
